executus-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: executus-app
  namespace: default
spec:
  selector:
    app: executus-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8081
