executus-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: executus-server
  namespace: default
spec:
  type: LoadBalancer
  selector:
    app: executus-server
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
