app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: executus-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: executus-app.local
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: executus-app
              port:
                number: 80
  - host: executus-server.local
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: executus-server
              port:
                number: 80
